--- a/configs/tests/cfg_test_time_nbeads_1.toml
+++ b/configs/tests/cfg_test_time_nbeads_1.toml
@@ -5,3 +5,4 @@ nchains = 8
 mobility = 5e-05
 fname_sys = '/home/janmak98/mucus/configs/cfg_test_time_nbeads_1.toml'
 fname_traj = '/storage/janmak98/masterthesis/trajectories/box/test/traj_test_time_nbeads_1.gro'
+cwd = '/home/janmak98/mucus'
