fixed debye screening

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,8 @@ steps = 1000
 stride = 50
 nbeads = 10
 nchains = 6
+number_of_beads = 60
 mobility = 0.00005
 fname_sys = "/home/jan/Desktop"
 fname_traj = "/home/jan/Desktop"
+c_S = 40
